--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
             width: 100%;
             text-align: center;
         }
+
+        * {
+            text-decoration: none;
+            overflow: visible;
+        }
     </style>
 </head>
 
@@ -796,7 +801,7 @@
                         </div>
 
                         <div class="refresh">
-                            <form name="tzrefresh" method="post" action="./Session.html">
+                            <form name="tzrefresh" method="post" action="./index.html">
                                 <p>
                                     Refresh page every <input type="text" name="refresh" value="5" size="2"
                                         maxlength="2"> minutes
@@ -821,8 +826,7 @@
                             </p>
                             <p>
                                 <a href="http://www.timezoneconverter.com/cgi-bin/findzone/findzone.pl"
-                                    target="_blank">How do I
-                                    determine my time zone?</a><br />
+                                    target="_blank">How do I determine my time zone?</a><br />
                             </p>
                         </div>
                     </td>
@@ -830,8 +834,7 @@
             </tbody>
         </table>
         <hr>
-        <div style="width:90vw !important; margin: 0 auto;">
-            <a name="how_to_use"></a>
+        <article style="width:90% !important; margin: 0 auto;">
             <h2>How to use the Forex Market Time Converter</h2>
             <p>
                 The forex market is available for trading 24 hours a day, five and one-half days per week. The Forex
@@ -867,7 +870,7 @@
                     indicators in the Status column.
                 </li>
             </ul>
-        </div>
+        </article>
     </div>
 </body>
 
